# my-repository

ConsoleApplication1/: ConsoleApplication1.slnx
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
ConsoleApplication1/ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  vc145.idb
ConsoleApplication1/ConsoleApplication1/x64/Debug/ConsoleA.dea6509a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab0/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab3((/: CMakeLists.txt
lab3.1/: CMakeLists.txt  f.cpp  f.hpp  main.cpp
lab3.1/inc/: my_lib.hpp
lab3.1/src/: my_lib.cpp
lab6/: CMakeLists.txt  f.cpp  f.hpp  main.cpp
